# lvtd-site

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  GEMINI.md  PRODUCT.md  README.md  STRUCTURE.md  TECH.md  VISION.md  docker-compose-local.yml  docker-compose-prod.yml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  render.yaml
.cursor/: mcp.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-workers.yml  deploy.yml  reviewgate.yml
apps/api/: auth.py  schemas.py  utils.py  views.py
apps/core/: __init__.py  context_processors.py  models.py  signals.py  stripe_webhooks.py  tasks.py  utils.py  views.py
apps/docs/: AGENTS.md  views.py
apps/docs/content/deployment/: docker-compose-deployment.md  environment-variables.md  render-deployment.md
apps/docs/content/features/: example_feature.md
apps/docs/content/getting-started/: introduction.md
apps/pages/: views.py
assets/css/: app.css
config/: settings.py
deployment/: entrypoint.sh
frontend/templates/: 404.html  base_app.html  base_landing.html
frontend/templates/account/: login.html  signup.html
frontend/templates/account/email/: account_already_exists_message.html  email_confirmation_message.html  email_confirmation_signup_message.html  email_confirmation_signup_subject.txt  password_reset_key_message.html  password_reset_key_subject.txt
frontend/templates/blog/: blog_post.html  blog_posts.html
frontend/templates/docs/: base_docs.html  docs_page.html
frontend/templates/pages/: admin-panel.html  home.html  landing-page.html  pricing.html  privacy-policy.html  terms-of-service.html  user-settings.html  uses.html
lvtd_site/: adapters.py  asgi.py  settings.py  urls.py  utils.py  wsgi.py
static/css/: app.css
website/: admin.py  context_processors.py  middleware.py  models.py  tests.py  urls.py  views.py
website/migrations/: 0001_stripewebhookevent.py  0002_blogpost.py  0003_intro_blog_post.py
website/templates/website/: base.html  blog_detail.html  blog_list.html  home.html  hosted_openclaw.html  privacy.html  terms.html
