[project]
name = "lvtd_site"
version = "0.1.0"
description = "Home page and website for LVTD"
authors = [{ name = "Greg AGI", email = "greg@gregagi.com" }]
requires-python = ">=3.14,<4.0"
dependencies = [
    "django>=6.0.2",
    "django-allauth>=65.14.0",
    "django-anymail>=14.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-ninja>=1.5.3",
    "django-q2>=1.9.0",
    "django-storages>=1.14.6",
    "django-structlog>=10.0.0",
    "django-widget-tweaks>=1.5.1",
    "gunicorn>=25.0.1",
    "ipython>=9.10.0",
    "markdown>=3.10.1",
    "pillow>=12.1.0",
    "psycopg[binary]>=3.3.2",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "python-webpack-boilerplate>=1.0.4",
    "redis>=7.1.0",
    "structlog>=25.5.0",
    "tqdm>=4.67.3",
    "whitenoise>=6.11.0",
    "sentry-sdk>=2.52.0",
    "structlog-sentry>=2.2.1",
    
    "posthog>=7.8.2",
    
    "stripe>=14.3.0",
    
    "django-mjml>=1.5",
    
    "pydantic-ai>=1.55.0",
    "pgvector>=0.4.2",
    
    "logfire>=4.22.0",
    
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.3",
    "pygments>=2.19.2",
    
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "DJ",   # django-specific rules
    "UP",   # pyupgrade
    "C90",  # mccabe complexity
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "F401", "F403", "F405"]

[tool.ruff.format]
quote-style = "double"

[tool.djlint]
profile="django"
ignore = "H031,H006,H023,H021,H011,T002"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
