[project]
name = "lvtd-site"
version = "0.1.0"
description = "LVTD org website"
requires-python = ">=3.12"
dependencies = [
  "Django==6.0.2",
  "dj-database-url>=2.1,<3.0",
  "django-q2>=1.6,<2.0",
  "psycopg[binary]>=3.1,<4.0",
  "whitenoise>=6.7,<7.0",
  "gunicorn>=22.0,<23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-django>=4.8,<5.0",
  "ruff>=0.7,<1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py"]
addopts = "-q"
